k8s-gateway-api/streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: default
  labels:
    app: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: quay.io/davidaparicio/streamlit-keycloak:0.7.1
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: default
spec:
  selector:
    app: streamlit
  ports:
  - port: 80
    targetPort: 8501
