k8s-gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: keycloak-https
      protocol: HTTPS
      port: 443
      hostname: keycloak.127.0.0.1.nip.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: keycloak-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: streamlit-https
      protocol: HTTPS
      port: 443
      hostname: streamlit.127.0.0.1.nip.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: streamlit-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
