k8s-gateway-api/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: demo
      namespace: nginx-gateway
      sectionName: keycloak-https
  hostnames:
    - keycloak.127.0.0.1.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloakx-http
          port: 80
